bynkc/tests/fixtures/positive/154_full_jobs/src/ops.karn
context ops

type Notification = {
  to: String,
}

service sweeper from cron {
  on schedule("*/5 * * * *") () -> Effect[Result[(), String]] {
    Ok(())
  }
}

service notifier from queue("notifications") {
  on message(message: Notification) -> Effect[QueueResult] {
    Ack
  }
}
