bynkc/tests/fixtures/negative/231_caller_not_on_call/src/demo.karn
context demo

service jobs from cron {
  on schedule("* * * * *") by c: Caller () -> Effect[Result[(), String]] {
    Ok(())
  }
}
